2002-06-18  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/sample_webdocs/demo/gallery/index.html, 
	SkunkWeb/sample_webdocs/demo/index.html, 
	SkunkWeb/sample_webdocs/demo/geeknews/index.html, 
	SkunkWeb/sample_webdocs/index.html:  added bit so that favicon.ico 
	will show up in mozilla

	* SkunkWeb/Makefile.in: added bit for favicon.ico

	* SkunkWeb/sample_webdocs/favicon.ico: added

	* SkunkWeb/Services/templating/MailServices.py: fixed way old bug.
	Had a reference to AED that would get hit when sending a message
	via SMTP would fail.

	* pylibs/parfile.py(foo): removed, as it's been useless for a while 
	now.

	* pylibs/AE/ComponentTag.py: use of __args__ would cause an error
	(used == instead of =)!

	* SkunkWeb/Services/scgi.py: fixed typo that caused problems on POSTs
	
	* SkunkWeb/Services/requestHandler/requestHandler.py: SkunkExcept
	wasn't imported so could cause problems in certain cases, fixed.

	* pylibs/prompt.py: fixed niggly bug

	* pylibs/IOTO.py: removed unused import

	* pylibs/Config.py: removed a few unused imports

	* pylibs/BasicAuth.py: fixed a few stupid bugs

	* pylibs/Authenticator.py: removed unused variable

	* pylibs/ErrorHandler.py: fixed typo, was raising CriticalError and
	should've been SkunkCriticalError

	* pylibs/AE/cfg.py: fixed typo

	* pylibs/AE/TypeTag.py: Had unused didanything variable -- removed

	* pylibs/AE/InitTags.py: was missing an import of SkunkExcept

	* pylibs/AE/ComponentTag.py: removed a useless import
	of string module

	* pylibs/AE/Cache.py: fixed a DEBUG msg pointed out by 
	pychecker and changed a string.atoi to int()

2002-06-17  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* configure.in, configure, SkunkWeb/configure.in,
	SkunkWeb/configure: added reference to scgi service.

	* SkunkWeb/Services/scgi.py: added support for the SCGI protocol
	-- http://www.mems-exchange.org/software/scgi/
